Fixed mobile stretch and a few colors

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -62,6 +62,8 @@
   .nav-theme .navbar-brand {
     color: #fff;
     text-shadow: none;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.7);
     -webkit-transition: 0.3s;
     -moz-transition: 0.3s;
     -o-transition: 0.3s;
@@ -72,9 +74,16 @@
       -moz-transition: 0.3s;
       -o-transition: 0.3s;
       transition: 0.3s; }
+  .nav-theme .navbar-nav > li:first-child a {
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px; }
+  .nav-theme .navbar-nav > li:last-child a {
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px; }
   .nav-theme .navbar-nav > li > a {
     color: #fff;
     text-shadow: none;
+    background-color: rgba(0, 0, 0, 0.7);
     -webkit-transition: 0.3s;
     -moz-transition: 0.3s;
     -o-transition: 0.3s;
